[package]
name = "ktop"
version = "0.1.0"
authors = ["Kurt Wilson <kurt4wilson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
clap = "2.33.3"
sysinfo = { git = "https://github.com/Kurtoid/sysinfo", default-features=false }
ctrlc = "3.1.9"
tui = "0.15"
termion = "1.5"
rand = "0.8"
bytefmt = { git= "https://github.com/Kurtoid/bytefmt" }
regex = "1.5"